# CHANGELOG

## v0.5.0

* PDFParserConfig BBoxConfig `table_vertical_strategy` and `table_horizontal_strategy` to `table_config` of type `TableBoxConfig` and change default values to `lines`
* Exclude linecurves within table bounding boxes

## v0.4.0

* Small refactorings in PDF parsing module
* all `Box` coordinates are stored as integers (float -> int via `ceil` and `floor`)
* PDFParserConfig BBoxConfig default `filter_min_y = 50` to `filter_min_y = None`
* PDFParserConfig BBoxConfig default `filter_max_y = 710` to `filter_max_y = None`
* PDFParserConfig BBoxConfig `min_image_width` and `min_image_height` to `image_filter_box_size` of type `BoxSizeConfig`
* add `page.rects` to `PDFLineCurveBox`