@@ -12,6 +12,7 @@ authors = []
 python = ">3.10.0"
 tqdm = "4.66.4"
 Pillow = "10.3.0"
+pydantic = "^2.7.4"
 python-docx = { version = "1.1.0", optional = true }
 pdfplumber = { version = "0.10.3", optional = true }
 pytesseract = { version = "0.3.10", optional = true }
