@@ -1,2 +1,3 @@
 tqdm
 Pillow
+pydantic = "2.7.4"
